REOPENED270663
Masonry isn't performing intrinsic sizing correctly.
https://bugs.webkit.org/show_bug.cgi?id=270663
Summary Masonry isn't performing intrinsic sizing correctly.
ikilpatrick
Reported 2024-03-07 14:46:52 PST
After a couple of minutes of playing see: https://software.hixie.ch/utilities/js/live-dom-viewer/?saved=12434 Sizing the columns should be done by placing everything in every possible column. (Columns should be the same size I suspect). Also note this gets more fun with mixing of different column types, e.g. min-content max-content, and different item types (scrollable for example).
Attachments
Screenshot. (187.66 KB, image/png)
2024-03-07 14:51 PST, ikilpatrick
no flags
ikilpatrick
Comment 1 2024-03-07 14:51:03 PST
Created attachment 470236 [details] Screenshot. Attached screenshot of rendering.
Radar WebKit Bug Importer
Comment 2 2024-03-07 16:24:51 PST
Brandon
Comment 3 2024-03-07 19:09:44 PST
Thanks Ian. I am aware of this bug. I actually already have a fix in progress.
ikilpatrick
Comment 4 2024-03-07 19:26:17 PST
Keep in mind that this gets more complex with subgrid. As you need to place each sub-grid in each possible position, then each subgrid-item in each spot in the subgrid with a complexity of ~O(N_items * N_tracks ^ Subgrid_Nesting)
Brandon
Comment 5 2024-03-08 09:19:46 PST
I agree nesting sub-grids can get computationally expensive super quickly. I had computed the Big O complexity a few weeks ago and basically reached the same conclusion (N_items * N_tracks) ^ Layers of nested sub-grids. Was chatting with Elika about this scenario earlier this week.
Brandon
Comment 6 2024-04-09 23:00:54 PDT
EWS
Comment 7 2024-04-11 15:51:07 PDT
Committed 277403@main (58b046421e15): <https://commits.webkit.org/277403@main> Reviewed commits have been landed. Closing PR #27048 and removing active labels.
ikilpatrick
Comment 8 2024-04-11 16:05:03 PDT
Hey Brandon - I left a comment here: https://github.com/WebKit/WebKit/pull/27048#pullrequestreview-1995582560 Can you point me to where you consider an indefinite item *doesn't* start in the track you are accumulating items for? Ian
ikilpatrick
Comment 9 2024-04-17 13:51:35 PDT
I also quickly tested the minibrowser on 277592@main (which i think contains the fix above). And I don't think the original test is working correctly.
Brandon
Comment 10 2024-04-17 14:31:01 PDT
Hi Ian, Thank you for testing. Could you share what you are seeing in the MiniBrowser you tested? I was checking https://software.hixie.ch/utilities/js/live-dom-viewer/?saved=12434 in the MiniBrowser (277403@main) and my columns are all sized 103px and the text content is not overflowing outside of the grid like we were seeing in the STP example.
Note You need to log in before you can comment on or make changes to this bug.