Masonry isn't performing intrinsic sizing correctly. https://bugs.webkit.org/show_bug.cgi?id=270663 rdar://problem/124240255

Reviewed by Sammy Gill.

Indefinite items from other intrinsic tracks were not being taken
into account during the calculation.

masonry-align-content-003-expected-ref/expected.html:
Updated to exact pixel lengths, since 'auto' can have different lengths in grid.

masonry-grid-template-columns-computed-withcontent.html:
Updated to have all intrinsic tracks being the same width.

* LayoutTests/imported/w3c/web-platform-tests/css/css-grid/masonry/tentative/align-content/masonry-align-content-003-expected.html:
* LayoutTests/imported/w3c/web-platform-tests/css/css-grid/masonry/tentative/align-content/masonry-align-content-003-ref.html:
* LayoutTests/imported/w3c/web-platform-tests/css/css-grid/masonry/tentative/masonry-grid-template-columns-computed-withcontent.html:
* Source/WebCore/rendering/Grid.cpp:
(WebCore::GridIterator::createForSubgrid):
* Source/WebCore/rendering/Grid.h:
* Source/WebCore/rendering/GridTrackSizingAlgorithm.cpp:
(WebCore::IndefiniteSizeStrategy::accumulateFlexFraction const):
(WebCore::GridTrackSizingAlgorithm::accumulateIntrinsicSizesForTrack):
(WebCore::GridTrackSizingAlgorithm::resolveIntrinsicTrackSizes):
* Source/WebCore/rendering/GridTrackSizingAlgorithm.h:

Canonical link: https://commits.webkit.org/277403@main